# srrdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: client.rs  config.rs  lib.rs  main.rs
src/engine/: catalog.rs  executor.rs  index.rs  mod.rs  persistence.rs  storage.rs  types.rs  wal.rs
src/protocol/: command.rs  frame.rs  handshake.rs  mod.rs  resultset.rs
src/repl/: repl.rs
src/server/: connection.rs  listener.rs  mod.rs  session.rs
src/sql/: ast.rs  error.rs  mod.rs  parser.rs  tokenizer.rs
tests/: integration.rs
