[package]
name = "srrdb"
version = "0.2.0"
edition = "2024"

[dependencies]
sqlparser = "0.55"
rustyline = "15"
colored = "3"
tokio = { version = "1", features = ["full"] }
bytes = "1"
mysql_common = "0.37"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
mysql_async = "0.36"
